--- a/.github/workflows/build-padavan-NEWIFI3.yml
+++ b/.github/workflows/build-padavan-NEWIFI3.yml
@@ -1,5 +1,5 @@
 #修改TNAME: K2P-5.0 中的K2P-5.0为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: Build Padavan mi3
+name: Build Padavan NEWIFI3
 
 on: 
   release:
@@ -38,8 +38,8 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        #TNAME: RM2100
-        TNAME: MI-3
+        #TNAME: Newifi-d2
+        TNAME: NEWIFI3
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
