--- a/.github/workflows/build-padavan-NEWIFI3.yml
+++ b/.github/workflows/build-padavan-NEWIFI3.yml
@@ -1,6 +1,10 @@
 #修改TNAME: K2P-5.0 中的K2P-5.0为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
 name: Build Padavan NEWIFI3
 
+on:
+  repository_dispatch:
+  workflow_dispatch:
+
 on: 
   release:
     types: [published]
@@ -11,8 +15,6 @@ on:
   #    - master
 #  schedule:
 #    - cron: 0 8 * * 5
-  watch:
-    types: [started]
 
 jobs:
   build:
